Fixed intermittent zip file closing issue, accessibility fix in high contrast, language switch fix.

--- a/public/index.css
+++ b/public/index.css
@@ -60,6 +60,7 @@ body {
   box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   padding: .75em;
+  outline:1px solid #f0f0f0;
 }
 .tile img{
       width: 100%;
@@ -175,6 +176,11 @@ h1 {
   margin: 1em auto;
   box-shadow: inset 2px 2px 8px rgba(0, 0, 0, 0.5);
   border: 0px transparent;
+  outline:1px solid #f0f0f0;
+}
+
+#search:focus{
+  outline:2px solid #000000;
 }
 
 #langSwitch {
